--- a/youtube/src/assets/styles/HomePage.css
+++ b/youtube/src/assets/styles/HomePage.css
@@ -48,10 +48,10 @@ body {
  padding: 12px 20px;
  border-radius: 22px;
  border: none;
- background-color: #EBEBEB;
+ background-color: #ebebeb;
  font-size: 16px;
  font-weight: 400;
- color: #30354C;
+ color: #30354c;
  font-family: "Mulish", sans-serif;
 }
 
@@ -264,7 +264,7 @@ body {
 .arrow-btn {
  width: 28px;
  height: 28px;
- background-color: #ccc; 
+ background-color: #ccc;
  border: none;
  border-radius: 50%;
  display: flex;
@@ -280,11 +280,11 @@ body {
 
 .arrow {
  display: inline-block;
- width: 7px; 
- height: 7px; 
+ width: 7px;
+ height: 7px;
  border: solid white;
  border-width: 0 2px 2px 0;
- padding: 0; 
+ padding: 0;
 }
 
 .left {
@@ -298,7 +298,6 @@ body {
 .scroll__container {
  display: flex;
  flex-direction: row;
- white-space: nowrap;
  gap: 40px;
  overflow-x: auto;
  scroll-behavior: smooth;
@@ -310,7 +309,6 @@ body {
 .scroll__container-recomended {
  display: flex;
  flex-direction: row;
- white-space: nowrap;
  gap: 40px;
  overflow-x: auto;
  scroll-behavior: smooth;
@@ -409,4 +407,185 @@ body {
  color: #c2c2c2;
  font-weight: 400;
  font-size: 16px;
+}
+
+/* -------------- MOBILE BOTTOM NAVBAR------------ */
+
+.mobile-navbar {
+ position: fixed;
+ bottom: 0;
+ left: 0;
+ right: 0;
+ background-color: #fff;
+ border-top: 1px solid #f1f1f1;
+ z-index: 99;
+ padding: 10px 0;
+ display: none;
+ height: 61px;
+ margin: 0 auto;
+}
+
+.mobile-navbar__list {
+ display: flex;
+ justify-content: space-around;
+ align-items: center;
+ list-style: none;
+ margin: 0;
+ padding: 0;
+}
+
+.mobile-navbar__item {
+ cursor: pointer;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+}
+
+.mobile-navbar__item img {
+ margin-bottom: 4px;
+}
+
+.mobile-navbar__item p {
+ font-size: 10px;
+ font-weight: 400;
+ color: #898989;
+}
+
+/* -------------- ACCEBILITY ------------ */
+
+@media (max-width: 320px) {
+ body {
+  width: 320px;
+ }
+
+ .sidebar {
+  display: none;
+ }
+
+ .mobile-navbar {
+  display: block;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+  z-index: 99;
+  padding: 10px 0;
+ }
+
+ .header_navbar_container {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  padding: 12px 16px 23px 16px;
+  background-color: #fff;
+ }
+
+ .navbar__search {
+  display: none;
+ }
+
+ .search_navbar_container {
+  position: relative;
+  width: 24px;
+ }
+
+ .search_icon {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 19px;
+  height: 19px;
+ }
+
+ .navbar__menu-button {
+  display: none;
+ }
+
+ .navbar__icons-list {
+  gap: 0;
+  justify-content: flex-end;
+ }
+
+ .navbar {
+  gap: 99px;
+ }
+
+ .left_navbar {
+  gap: 0;
+ }
+
+ .right_navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 24px;
+ }
+
+ .navbar__icons-list .navbar__icon-item:not(:last-child) {
+  display: none;
+ }
+
+ .navbar__avatar {
+  height: 30px;
+  width: 30px;
+  align-self: center;
+ }
+ .sidebar {
+  display: none;
+ }
+
+ .bloggers__scroll_container:nth-last-of-type(1),
+ .bloggers__scroll_container:nth-last-of-type(2) {
+  display: none;
+ }
+
+ .main_content {
+  margin: 0;
+  width: 100%;
+  padding: 0 16px;
+ }
+
+ .blogger__layer {
+  display: none;
+ }
+
+ .scroll__container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+  height: auto;
+ }
+
+ .scroll__container::-webkit-scrollbar {
+  display: none;
+ }
+
+ .slide__image {
+  width: 288px;
+  height: 150px;
+ }
+
+ .slide__image-wrapper {
+  width: 288px;
+  height: 150px;
+ }
+
+ .scroll__card {
+  cursor: pointer;
+  width: 288px;
+ }
+ .video__info {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+ }
 }
