--- a/youtube/src/assets/styles/HomePage.css
+++ b/youtube/src/assets/styles/HomePage.css
@@ -47,13 +47,15 @@ body {
  width: 830px;
  padding: 12px 20px;
  border-radius: 22px;
- border: none;
  background-color: #ebebeb;
  font-size: 16px;
  font-weight: 400;
  color: #30354c;
  font-family: "Mulish", sans-serif;
+ border: none;
+ outline-color:#D9D9D9;
 }
+
 
 .search_navbar_container {
  position: relative;
@@ -259,6 +261,18 @@ body {
  /* align-items: flex-end; */
  height: 50px;
  /* padding-bottom: 5px; */
+}
+
+.subscribe-btn{
+    margin-right: 30px;
+    padding: 10px 20px;
+    background-color: red;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    border: none;
+    cursor: pointer;
 }
 
 .arrow-btn {
