--- a/youtube/src/assets/styles/ChannelPage.css
+++ b/youtube/src/assets/styles/ChannelPage.css
@@ -303,6 +303,7 @@ body {
 .channel_layout {
  display: grid;
  grid-template-columns: 1fr 1fr;
+ margin-bottom: 61px;
 }
 
 .channel_navigation ul {
@@ -310,14 +311,17 @@ body {
  display: flex;
  flex-direction: row;
  gap: 69px;
+ font-size: 18px;
+ font-weight: 400;
 }
 
 .channel_navigation li button {
  border: none;
  background: none;
+ cursor: pointer;
+ font-family: "Mulish", sans-serif;
  font-size: 18px;
  font-weight: 400;
- cursor: pointer;
 }
 
 .left_container {
@@ -371,7 +375,7 @@ body {
  text-overflow: ellipsis;
 }
 
-.timer {
+.timer-preview {
  position: absolute;
  bottom: 8px;
  right: 8px;
@@ -419,4 +423,388 @@ body {
  font-size: 18px;
  font-weight: 700;
  color: #19202c;
+}
+
+/* -------------- SCROLLBAR ------------ */
+
+.channel-name-for-scroll {
+ font-size: 26px;
+ font-weight: 700;
+ margin-bottom: 30px;
+}
+
+.bloggers__scroll_container {
+ padding-bottom: 50px;
+}
+
+.blogger__layer {
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ padding-right: 149px;
+}
+
+.name_field {
+ display: flex;
+ flex-direction: row;
+ gap: 20px;
+ align-items: center;
+ margin-bottom: 30px;
+}
+
+.name_field img {
+ width: 50px;
+ height: 50px;
+ border-radius: 50%;
+}
+
+.blogger__layer h1 {
+ font-weight: 700;
+ font-size: 26px;
+}
+
+.arrow-container {
+ display: flex;
+ gap: 10px;
+ align-items: center;
+ /* align-items: flex-end; */
+ height: 50px;
+ /* padding-bottom: 5px; */
+}
+
+.arrow-btn {
+ width: 28px;
+ height: 28px;
+ background-color: #ccc;
+ border: none;
+ border-radius: 50%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ cursor: pointer;
+ transition: background-color 0.3s;
+}
+
+.arrow-btn:hover {
+ background-color: #bbb;
+}
+
+.arrow {
+ display: inline-block;
+ width: 7px;
+ height: 7px;
+ border: solid white;
+ border-width: 0 2px 2px 0;
+ padding: 0;
+}
+
+.left {
+ transform: rotate(135deg);
+}
+
+.right {
+ transform: rotate(-45deg);
+}
+
+.scroll__container {
+ display: flex;
+ flex-direction: row;
+ gap: 40px;
+ overflow-x: auto;
+ scroll-behavior: smooth;
+ height: 200px;
+ width: scroll;
+ padding-right: 20px;
+}
+
+.scroll__container::-webkit-scrollbar {
+ display: none;
+}
+
+.scroll__card {
+ width: 250px;
+ height: 200px;
+ cursor: pointer;
+ flex-shrink: 0;
+ position: relative;
+ display: inline-block;
+}
+
+.slide__image-wrapper {
+ position: relative;
+ width: 250px;
+ height: 150px;
+ border-radius: 14px;
+ overflow: hidden;
+ margin-bottom: 10px;
+}
+
+.slide__image {
+ width: 100%;
+ height: 100%;
+ object-fit: cover;
+ display: inline-block;
+}
+
+.timer {
+ position: absolute;
+ bottom: 8px;
+ right: 8px;
+ background-color: rgba(0, 0, 0, 0.3);
+ color: white;
+ padding: 4px 8px;
+ border-radius: 12px;
+ font-weight: 400;
+ font-size: 14px;
+ user-select: none;
+}
+
+.video__name {
+ margin-bottom: 4px;
+}
+
+.video__info {
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ color: #c2c2c2;
+ font-weight: 400;
+ font-size: 13px;
+}
+
+/* -------------- MOBILE BOTTOM NAVBAR------------ */
+
+.mobile-navbar {
+ position: fixed;
+ bottom: 0;
+ left: 0;
+ right: 0;
+ background-color: #fff;
+ border-top: 1px solid #f1f1f1;
+ z-index: 99;
+ padding: 10px 0;
+ display: none;
+ height: 61px;
+ margin: 0 auto;
+}
+
+.mobile-navbar__list {
+ display: flex;
+ justify-content: space-around;
+ align-items: center;
+ list-style: none;
+ margin: 0;
+ padding: 0;
+}
+
+.mobile-navbar__item {
+ cursor: pointer;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+}
+
+.mobile-navbar__item img {
+ margin-bottom: 4px;
+}
+
+.mobile-navbar__item p {
+ font-size: 10px;
+ font-weight: 400;
+ color: #898989;
+}
+
+.navbar__logo_container_mobile,
+.exrta_dots,
+.channel_navigation-mobile,
+.exrta_dots-button {
+ display: none;
+}
+
+/* -------------- ACCebility ------------ */
+
+@media (max-width: 320px) {
+ body {
+  width: 320px;
+ }
+
+ .exrta_dots {
+  display: block;
+  font-size: 25px;
+  font: bold;
+ }
+ .channel_navigation-mobile {
+  display: block;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 69px;
+  font-size: 18px;
+  font-weight: 400;
+ }
+
+ .exrta_dots-button {
+  display: block;
+  border: none;
+  background: none;
+  cursor: pointer;
+ }
+
+ .navbar__avatar,
+ .channel_navigation,
+ .cover_container,
+ .right_container,
+ .video_preview,
+ .navbar__logo_continer {
+  display: none;
+ }
+
+ .navbar__logo_container_mobile {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+ }
+
+ .navbar__logo_container_mobile p {
+  font-size: 16px;
+  font-weight: 700;
+ }
+
+ .header_name_mobile {
+  font-size: 16px;
+  font-weight: 700;
+ }
+
+ .sidebar {
+  display: none;
+ }
+
+ .mobile-navbar {
+  display: block;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+  z-index: 99;
+  padding: 10px 0;
+ }
+
+ .header_navbar_container {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  padding: 12px 16px 23px 16px;
+  background-color: #fff;
+ }
+
+ .navbar__search {
+  display: none;
+ }
+
+ .search_navbar_container {
+  position: relative;
+  width: 24px;
+ }
+
+ .search_icon {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 19px;
+  height: 19px;
+ }
+
+ .navbar__menu-button {
+  display: none;
+ }
+
+ .navbar__icons-list {
+  gap: 0;
+  justify-content: flex-end;
+ }
+
+ .navbar {
+  gap: 42px;
+ }
+
+ .left_navbar {
+  gap: 0;
+ }
+
+ .right_navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 24px;
+ }
+
+ .navbar__icons-list .navbar__icon-item:not(:last-child) {
+  display: none;
+ }
+
+ .navbar__avatar {
+  height: 30px;
+  width: 30px;
+  align-self: center;
+ }
+
+ .sidebar {
+  display: none;
+ }
+
+ .main_content {
+  margin: 0;
+  width: 100%;
+  padding: 0 16px;
+ }
+
+ .blogger__layer {
+  display: none;
+ }
+
+ .scroll__container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+  height: auto;
+ }
+
+ .scroll__container::-webkit-scrollbar {
+  display: none;
+ }
+
+ .slide__image {
+  width: 288px;
+  height: 150px;
+ }
+
+ .slide__image-wrapper {
+  width: 288px;
+  height: 150px;
+ }
+
+ .scroll__card {
+  cursor: pointer;
+  width: 288px;
+ }
+ .video__info {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+ }
+
+ .header_mobile_ref {
+  text-decoration: none;
+  color: inherit;
+}
 }
