--- a/youtube/src/assets/styles/HomePage.css
+++ b/youtube/src/assets/styles/HomePage.css
@@ -53,9 +53,8 @@ body {
  color: #30354c;
  font-family: "Mulish", sans-serif;
  border: none;
- outline-color:#D9D9D9;
+ outline-color: #d9d9d9;
 }
-
 
 .search_navbar_container {
  position: relative;
@@ -263,16 +262,16 @@ body {
  /* padding-bottom: 5px; */
 }
 
-.subscribe-btn{
-    margin-right: 30px;
-    padding: 10px 20px;
-    background-color: red;
-    border-radius: 20px;
-    color: #fff;
-    font-size: 16px;
-    font-weight: 400;
-    border: none;
-    cursor: pointer;
+.subscribe-btn {
+ margin-right: 30px;
+ padding: 10px 20px;
+ background-color: red;
+ border-radius: 20px;
+ color: #fff;
+ font-size: 16px;
+ font-weight: 400;
+ border: none;
+ cursor: pointer;
 }
 
 .arrow-btn {
