--- a/youtube/src/components/header/Header.css
+++ b/youtube/src/components/header/Header.css
@@ -6,7 +6,7 @@
  z-index: 100;
  padding: 20px 70px 30px 32px;
  background-color: #fff;
-
+ box-sizing: border-box;
 }
 
 .navbar {
@@ -41,9 +41,8 @@
  color: #30354c;
  font-family: "Mulish", sans-serif;
  border: none;
- outline-color:#D9D9D9;
+ outline-color: #d9d9d9;
 }
-
 
 .search_navbar_container {
  position: relative;
