--- a/youtube/src/pages/palyer.css
+++ b/youtube/src/pages/palyer.css
@@ -1,14 +1,24 @@
 .main_content {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  padding-left: 80px; 
-  align-items: flex-start;
+ display: flex;
+ flex-direction: row;
+ gap: 40px;
+ padding-left: 80px;
+ align-items: flex-start;
 }
 
 .content_area {
-  flex-grow: 1;
+ flex-grow: 1;
+ display: flex;
+ flex-direction: column;
+ gap: 20px;
+}
+
+@media (max-width: 320px) {
+ .main_content {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  padding: 0;
+  margin: 0 16px;
+  gap: 0;
+ }
 }
