--- a/youtube/src/components/Player/VideoPlayer.css
+++ b/youtube/src/components/Player/VideoPlayer.css
@@ -10,6 +10,10 @@
  margin-bottom: 38px;
 }
 
+.controls_mobile {
+ display: none;
+}
+
 .player-container {
  position: relative;
  max-width: 1363px;
@@ -57,7 +61,7 @@
 }
 
 .progress-bar {
- width: 35%; /* заменишь на динамическое значение */
+ width: 35%;
  height: 100%;
  background-color: red;
  transition: width 0.3s ease;
@@ -198,16 +202,170 @@
  height: 6px;
 }
 
-.dots_button{
-    background: none;
-    border: none;
-    margin-left: 30px;
-    cursor: pointer;
+.dots_button {
+ background: none;
+ border: none;
+ margin-left: 30px;
+ cursor: pointer;
+}
+
+.video__player-description-mobile {
+ display: none;
 }
 
 @media (max-width: 320px) {
-  .video__player-container{
-    max-width: 320px;
-    margin: 0 -16px;
-  }
+ .video__player-container {
+  max-width: 320px;
+  border-bottom: none;
+  margin-bottom: 0;
+  padding-bottom: 0;
+ }
+
+ .video__player-description {
+  display: none;
+ }
+
+ .player-container {
+  border-radius: 0;
+  margin-left: -16px;
+ }
+
+ .description-name {
+  font-size: 20px;
+ }
+
+ .description-views {
+  font-size: 12px;
+ }
+ .progress-wrapper,
+ .controls {
+  display: none;
+ }
+ .func-container {
+  display: none;
+ }
+
+ .video__player-description-mobile {
+  display: block;
+ }
+
+ .header_description-mobile {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  margin-right: 40px;
+ }
+
+ .left_container-mobile {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+ }
+
+ .description-name-mobile {
+  font-size: 20px;
+  font-weight: 700;
+ }
+ .description-views-mobile {
+  font-size: 12px;
+  font-weight: 400;
+ }
+
+ .chewron_container button {
+  border: none;
+  background: none;
+  cursor: pointer;
+ }
+
+ .arrow_img {
+  width: 10px;
+  height: 7px;
+ }
+
+ .scroll_functional_container {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+  padding-bottom: 30px;
+ }
+
+ .scroll_functional_container::-webkit-scrollbar {
+  display: none;
+ }
+
+ .func-container-button-mobile {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  min-width: 100px;
+  padding: 10px 20px;
+  background: #f0f0f0;
+  border: none;
+  border-radius: 20px;
+  white-space: nowrap;
+  cursor: pointer;
+ }
+
+ .func-container-button-mobile p {
+  font-weight: 400;
+  font-size: 16px;
+  font-family: "Mulish", sans-serif;
+ }
+
+ .video {
+  width: 100%;
+  max-width: 100%;
+ }
+
+ .controls_mobile {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 8px;
+  left: 0;
+  right: 0;
+  background-color: rgba(61, 61, 61, 0.6);
+  border-radius: 10px;
+  width: 308px;
+  height: 30px;
+  z-index: 10;
+  margin: 0 6px;
+  padding: 0 6px;
+  font-size: 10px;
+ }
+
+ .controls_mobile img {
+  width: 12px;
+  height: 12px;
+  cursor: pointer;
+ }
+
+ .controls_mobile span {
+  font-size: 10px;
+  color: white;
+  white-space: nowrap;
+ }
+
+ .progress_line {
+  flex-grow: 1;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 2px;
+  position: relative;
+  overflow: hidden;
+ }
+
+ .progress_fill {
+  height: 100%;
+  background-color: red;
+  width: 0%; /* Меняешь через JS */
+  border-radius: 2px;
+ }
 }
